<resources>
    <string name="app_name">Carros</string>

    <!-- A -->
    <string name="action_about">Sobre</string>
    <string name="action_deletar">Deletar</string>
    <string name="action_share">Compartilhar</string>
    <string name="action_settings">Settings</string>
    <string name="about_dialog_text">
<![CDATA[
<b>Aplicativo dos Carros 2015</b><br>
Versao %s<br><br>
<a href="http://www.livroandroid.com.br">http://livroandroid.com.br</a><br><br>
<a href="http://www.facebook.com/ricardolecheta">http://facebook.com/ricardolecheta</a><br><br>
<a href="https://plus.google.com/+RicardoLecheta">https://plus.google.com/+RicardoLecheta</a>
    ]]>
    </string>
    <string name="about_dialog_title">Livro Android</string>

    <!-- C -->
    <string name="cache">Cache</string>
    <string name="content_description">Content description</string>
    <string name="carros">Carros</string>
    <string name="configuracoes">Configurações</string>
    <string name="classicos">Clássicos</string>
    <string name="classico">Clássico</string>
    <string name="compartilhar_carro">Compartilhar Carro</string>
    <string name="compartilhar_carros">Compartilhar Carros</string>

    <!-- D -->
    <string name="descricao">Descrição</string>

    <!-- E -->
    <string name="esportivos">Esportivos</string>
    <string name="esportivo">Esportivo</string>
    <string name="error_conexao_indisponivel">Conexão indisponível. Verifique seu Wi-Fi ou 3G.</string>
    <string name="action_editar">Editar</string>

    <!-- F -->
    <string name="favoritos">Favoritos</string>
    <string name="fazer_cache">Fazer cache dos carros.</string>

    <!-- H -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- L -->
    <string name="luxo">Luxo</string>
    <string name="latitudeLongitude">Lat / Lng</string>

    <!-- M -->
    <string name="msg_internet_indisponivel">Internet indisponível. Verifique sua conexão e tente novamente.</string>
    <string name="mapa">Mapa</string>
    <string name="msg_carro_favoritado">Carro adicionado dos favoritos.</string>
    <string name="msg_carro_desfavoritado">Carro removido dos favoritos.</string>
    <string name="msg_carro_desfavoritados">Carros removidos dos favoritos.</string>
    <string name="msg_erro_salvar">Ocorreu um erro ao salvar o carro</string>
    <string name="msg_confirma_excluir_carro">Você deseja mesmo excluir este carro?</string>
    <string name="msg_aguarde">Por favor aguarde...</string>
    <string name="msg_error_form_nome">Nome é obrigatório</string>

    <!-- N -->
    <string name="nome">Nome</string>
    <string name="nao">Não</string>
    <string name="novo_carro">Novo Carro</string>

    <!-- Nav Drawer -->
    <string name="nav_drawer_username">Ricardo Lecheta</string>
    <string name="nav_drawer_email">rlecheta@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- R -->
    <string name="refresh">Refresh</string>

    <!-- S -->
    <string name="salvar">Salvar</string>
    <string name="action_salvar">Salvar</string>
    <string name="sobre">Sobre</string>
    <string name="site_do_livro">Site do Livro</string>
    <string name="sim">Sim</string>

    <!-- V -->
    <string name="vazio" />
    <string name="video">Vídeo</string>



</resources>
