<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:padding="16dp"
    app:cardUseCompatPadding="false"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">
        <!-- Tipo -->
        <RadioGroup
            android:id="@+id/radioTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:layout_marginStart="8dp">

            <RadioButton
                android:id="@+id/tipoClassico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/classico" />

            <RadioButton
                android:id="@+id/tipoEsportivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esportivo" />

            <RadioButton
                android:id="@+id/tipoLuxo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luxo" />
        </RadioGroup>

        <!-- Nome -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nome"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            card_view:ignore="Autofill,LabelFor"
            android:inputType="text" />

        <!-- Desc -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/descricao"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:ignore="Autofill,LabelFor"
            android:inputType="text" />

        <Button
            android:id="@+id/btSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
