<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- CardView com a descrição do Carro -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginTop="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">
            <!-- Desc -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/descricao"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView com o Vídeo -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardPlayVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp"
        android:foreground="?attr/selectableItemBackground"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Video -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/video"
                android:textSize="16sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="260dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:alpha="0.5"
                    android:contentDescription="@string/content_description" />

                <ImageView
                    android:id="@+id/imgPlayVideo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:alpha="0.5"
                    android:src="@drawable/play"
                    android:contentDescription="@string/content_description"
                    android:foreground="?attr/selectableItemBackground" />
            </FrameLayout>

            <TextView
                android:id="@+id/tVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    
    <!-- CardView com o Mapa -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <!-- Mapa -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/mapa"
                android:textSize="16sp"
                android:textStyle="bold" />
            
            <!-- Mapa aqui -->
            <FrameLayout
                android:id="@+id/mapaFragment"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_margin="16dp" >

                <fragment
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    class="com.google.android.gms.maps.SupportMapFragment" />

                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mapa Aqui"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    card_view:ignore="HardcodedText" />-->

            </FrameLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
